Fix broken error handling, tweak UI
- Hide scrollbar if note content is not large enough
- Close both the conflict and note editor modal when the overwrite
  action is triggered

--- a/indico/web/client/js/react/components/notes/ConflictModal.module.scss
+++ b/indico/web/client/js/react/components/notes/ConflictModal.module.scss
@@ -7,9 +7,13 @@
 
 .note-content {
   max-height: 60vh;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
-.action-buttons :global(.icon::before) {
-  margin-right: 0.25em !important;
+.action-button-icons :global(.icon::before) {
+  margin-right: 0.25em;
+}
+
+.action-button-text {
+  margin: 0 0.25em;
 }
